test/e2e/metaprotocol/testdata/consistent-hash-lb/destinationrule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dubbo-sample-provider
spec:
  host: org.apache.dubbo.samples.basic.api.demoservice
  subsets:
  - name: sample
    labels:
      app: dubbo-sample-provider
    trafficPolicy:
      loadBalancer:
        consistentHash:
          httpHeaderName: method
