test/e2e/metaprotocol/testdata/consistent-hash-lb/metarouter-sample.yaml
---
apiVersion: metaprotocol.aeraki.io/v1alpha1
kind: MetaRouter
metadata:
  name: test-metaprotocol-route
spec:
  hosts:
    - org.apache.dubbo.samples.basic.api.demoservice
  routes:
    - name: sample
      route:
        - destination:
            host: org.apache.dubbo.samples.basic.api.demoservice
            subset: sample
